Chapter14/istio-virtual-service-3.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapplication
spec:
  hosts:
  - service-b
  http:
    route:
    - destination:
        host: service-backend-b
        subset: v3
