Chapter14/service2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: service-2
    spec:
      containers:
      - name: service2
        image: ravirdv/http-responder:latest
        ports:
          - containerPort: 5000
            protocol: TCP
            name: response-port
