Chapter14/service2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-2
spec:
  selector:
    name: service-2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
